finish class 11 js funtion 2

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Bienvenidos a JS :)</h1>
 
+    <h3>Hoal tu impuesto es de:</h3>
+
+    <p>Debes pagar <span id="cantidad">1000</span>  EUR</p>
+
 
     
     <script src="main.js"></script>
