finish class conditional rendering

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <p>Debes pagar <span id="cantidad">1000</span>  EUR</p>
 
 
+    <div id="content">
+        <h2>Estos son los pagos</h2>        
+    </div>
+
+
+
     
     <script src="main.js"></script>
 </body>
