finish class dom

--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <title>JS :)</title>
 </head>
 <body>
-    <h1>Bienvenidos a JS :)</h1>
+    <h1 id="title">Titulo</h1>
 
-    <h3>Hoal tu impuesto es de:</h3>
+    <p class="text">texto 1</p>
+    <p onclick="changeTitle()" >texto 2</p>
+    <p class="text">texto 3</p>
 
-    <p>Debes pagar <span id="cantidad">1000</span>  EUR</p>
-
-
-    <div id="content">
-        <h2>Estos son los pagos</h2>        
-    </div>
+    <button onclick="changeTitle()" >cambiar titulo</button>
 
 
 
