finish class randon card

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS :)</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 id="title">Titulo</h1>
@@ -13,6 +14,12 @@
     <p class="text">texto 3</p>
 
     <button onclick="changeTitle()" >cambiar titulo</button>
+
+    <br>
+    <br>
+    <p>Primer dado: <span id="dado1">1</span></p>
+    <p>Segundo dado: <span id="dado2">3</span></p>
+    <button onclick="lanzarDados()">Lanzar dados</button>
 
 
 
