finish random card generator 2 class

--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
 
     <br>
     <br>
-    <p>Primer dado: <span id="dado1">1</span></p>
-    <p>Segundo dado: <span id="dado2">3</span></p>
+    <p>Primer dado: <span class="dado" id="dado1">0</span></p>
+    <p>Segundo dado: <span class="dado" id="dado2">0</span></p>
     <button onclick="lanzarDados()">Lanzar dados</button>
+
+    <br><br><br>
+    <label for="height">Alto:</label>
+    <input type="number" name="height" id="height" placeholder="ingresa el alto">
+    <label for="width">Ancho:</label>
+    <input type="number" name="width" id="width" placeholder="ingresa el ancho">
+    <button id="boton1">cambiar dimensiones</button>
+    <br><br><br>
 
 
 
